--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: tests
 on: [push]
 
 jobs:
-  cargo tests:
+  cargo_tests:
     name: Rust ${{ matrix.rust_version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -25,7 +25,7 @@ jobs:
     # detection, so it'll be built, but it probably won't run.
     - run: cargo test --features=c_avx512,rayon
 
-  cross tests:
+  cross_tests:
     name: cross tests
     runs-on: ubuntu-latest
 
