test against test_vectors.json in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,16 @@ jobs:
         toolchain: nightly
         override: true
     - run: cargo test --benches
+
+  test_vectors:
+    name: test vectors
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+    - run: cargo test
+      working-directory: ./test_vectors
