--- a/test_vectors/Cargo.toml
+++ b/test_vectors/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.0.0"
 edition = "2018"
 
 [dependencies]
+# If you ever change these path dependencies, you'll probably need to update
+# cross_test.sh, or CI will break. I'm sorry >.<
 blake3 = { path = "../" }
 hex = "0.4.0"
 reference_impl = { path = "../reference_impl" }
