--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,6 @@ jobs:
     - run: cross test --target ${{ matrix.arch }}
     # Test the NEON implementation on ARM targets.
     - run: cross test --target ${{ matrix.arch }} --features=c_neon
-      if: startsWith(${{ matrix.arch }}, 'armv7-') || startsWith($${ matrix.arch }}, 'aarch64-')
+      if: startsWith(matrix.arch, 'armv7-') || startsWith(matrix.arch, 'aarch64-')
     # Test vectors. Note that this uses a hacky script due to path dependency limitations.
     - run: ./test_vectors/cross_test.sh --target ${{ matrix.arch }}
