make the "c_avx512" feature a no-op on non-x86
This lets us enable it by default in b3sum.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
     - name: test b3sum
       run: cargo test
       working-directory: ./b3sum
+    - name: test b3sum --no-default-features
+      run: cargo test --no-default-features
+      working-directory: ./b3sum
 
   cross_tests:
     name: cross ${{ matrix.arch }}
