--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -17,6 +17,8 @@ blake3 = { version = "0.1", path = ".." }
 clap = { version = "2.33.0", default-features = false }
 hex = "0.4.0"
 memmap = { version = "0.7.0", optional = true }
+once_cell = "1.2.0"
+crossbeam = "0.7.3"
 
 [dev-dependencies]
 assert_cmd = "0.12.0"
