--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "blake3"
 version = "0.1.0"
 authors = ["Jack O'Connor <oconnor663@gmail.com>"]
+description = "the BLAKE3 hash function"
+repository = "https://github.com/BLAKE3-team/BLAKE3"
+license = "CC0"
+documentation = "https://docs.rs/blake3"
+readme = "README.md"
 edition = "2018"
 
 [features]
