--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Jack O'Connor <oconnor663@gmail.com>"]
 description = "a command line implementation of the BLAKE3 hash function"
 repository = "https://github.com/BLAKE3-team/BLAKE3"
-license = "CC0"
+license = "Apache-2.0"
 readme = "README.md"
 edition = "2018"
 
