--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 edition = "2018"
 
 [features]
-default = ["rayon", "c_avx512"]
+default = ["c_avx512", "rayon"]
 c_avx512 = ["blake3/c_avx512"]
 c_neon = ["blake3/c_neon"]
 rayon = ["blake3/rayon", "memmap"]
