--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,15 @@ jobs:
     - uses: actions/checkout@v1
     - run: make test
       working-directory: ./c
+    - run: make clean && rm blake3_sse41.c
+      working-directory: ./c
+    - run: BLAKE3_NO_SSE41=1 make test
+      working-directory: ./c
+    - run: make clean && rm blake3_avx2.c
+      working-directory: ./c
+    - run: BLAKE3_NO_SSE41=1 BLAKE3_NO_AVX2=1 make test
+      working-directory: ./c
+    - run: make clean && rm blake3_avx512.c
+      working-directory: ./c
+    - run: BLAKE3_NO_SSE41=1 BLAKE3_NO_AVX2=1 BLAKE3_NO_AVX512=1 make test
+      working-directory: ./c
