--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ constant_time_eq = "0.1.5"
 rayon = { version = "1.2.1", optional = true }
 cfg-if = "0.1.10"
 digest = "0.8.1"
+crypto-mac = "0.7.0"
 
 [dev-dependencies]
 page_size = "0.4.1"
