--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ jobs:
     name: ${{ matrix.rust_version }} ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         rust_version: [stable, beta, nightly]
         os: [ubuntu-latest, windows-latest, macOS-latest]
