--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 edition = "2018"
 
 [features]
-default = ["c_avx512", "rayon"]
-c_avx512 = ["blake3/c_avx512"]
+default = ["c", "rayon"]
+c = ["blake3/c"]
 c_neon = ["blake3/c_neon"]
 rayon = ["blake3/rayon", "memmap"]
 
