--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ digest = "0.8.1"
 crypto-mac = "0.7.0"
 
 [dev-dependencies]
+hex = "0.4.2"
 page_size = "0.4.1"
 rand = "0.7.2"
 rand_chacha = "0.2.1"
