--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -9,17 +9,17 @@ readme = "README.md"
 edition = "2018"
 
 [features]
-default = ["c", "rayon"]
+default = ["c"]
 c = ["blake3/c"]
 c_neon = ["blake3/c_neon"]
-rayon = ["blake3/rayon", "memmap"]
 
 [dependencies]
 anyhow = "1.0.25"
-blake3 = { version = "0.2", path = ".." }
+blake3 = { version = "0.2", path = "..", features = ["rayon"] }
 clap = { version = "2.33.0", default-features = false }
 hex = "0.4.0"
-memmap = { version = "0.7.0", optional = true }
+memmap = "0.7.0"
+rayon = "1.2.1"
 
 [dev-dependencies]
 assert_cmd = "0.12.0"
