--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -9,9 +9,9 @@ readme = "README.md"
 edition = "2018"
 
 [features]
-default = ["c"]
-c = ["blake3/c"]
-c_neon = ["blake3/c_neon"]
+neon = ["blake3/neon"]
+prefer_intrinsics = ["blake3/prefer_intrinsics"]
+pure = ["blake3/pure"]
 
 [dependencies]
 anyhow = "1.0.25"
