print out instruction set support in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
         toolchain: ${{ format('{0}-{1}', matrix.channel, matrix.target.toolchain) }}
         profile: minimal
         override: true
+    # Print out instruction set support, for debugging.
+    - run: cargo run --bin instruction_set_support
     # Default tests plus Rayon.
     - run: cargo test --features=rayon
     # no_std tests.
