--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: tests
 
 on: [push, pull_request]
 
+env:
+  RUSTFLAGS: "-D warnings"
+
 jobs:
   cargo_tests:
     name: ${{ matrix.target.name }} ${{ matrix.channel }}
